validate: Fix z-index issue with error buttons (Firefox) - see vpetrov/survana#10 ; Fix invalid reference to 'jQuery' instead of '$'

--- a/public/css/jquery.mobile.1.3.0.css
+++ b/public/css/jquery.mobile.1.3.0.css
@@ -329,7 +329,6 @@ label:not([for]) {
 .s-error-label
 {
     position:absolute;
-    z-index:98; /* error mini button -1 */
     right:0.25em;
     font-weight:normal;
 }
